<?xml version="1.0"?>
<package format="2">
  <name>srg-expressions</name>
  <version>0.0.0</version>
  <description>The srg-expressions package</description>

  <maintainer email="opfer@vs.uni-kassel.de">Stephan Opfer</maintainer>
  
  <depend>alica_engine</depend>
  <license>MIT</license>


  <buildtool_depend>catkin</buildtool_depend>


  <export>
  </export>
</package>
