cmake_minimum_required(VERSION 2.8.3)
project(srg_robot)

add_compile_options(-std=c++11)

find_package(catkin REQUIRED srg_worldmodel capnzero grid_sim agent_id)

catkin_package(
  INCLUDE_DIRS include
  LIBRARIES srg_robot
  CATKIN_DEPENDS srg_worldmodel capnzero agent_id
#  DEPENDS system_lib
)

include_directories(
  include
  ${catkin_INCLUDE_DIRS}
)

add_library(${PROJECT_NAME}
  src/Robot.cpp
)

target_link_libraries(${PROJECT_NAME}
  ${catkin_LIBRARIES}
)
